# lab_work_4

./: CMakeLists.txt
.github/workflows/: action.yml
formatter/: CMakeLists.txt
formatter_ex/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver/: CMakeLists.txt
solver_application/: CMakeLists.txt
